--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     cppcheck=1.90-4build1 \
     make=4.2.1-1.2 \
     llvm-11=1:11.0.0-2~ubuntu20.04.1 \
-    lldb=1:10.0-50~exp1 \
+    gdb=9.2-0ubuntu1~20.04 \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
