set ENV DEBIAN_FRONTEND=noninteractive to solve ...
Please select the geographic area in which you live. Subsequent configuration
questions will narrow this down by presenting a list of cities, representing
the time zones in which they are located.

 1. Africa      4. Australia  7. Atlantic  10. Pacific  13. Etc
 2. America     5. Arctic     8. Europe    11. SystemV
 3. Antarctica  6. Asia       9. Indian    12. US
Geographic area:

https://askubuntu.com/questions/909277/avoiding-user-interaction-with-tzdata-when-installing-certbot-in-a-docker-contai

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -165,6 +165,8 @@ CMD ["/usr/sbin/sshd", "-D"]
 ################################################################################################################################################################
 FROM dev AS clion
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 ## Install OpenJDK-8
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
