--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: login
         uses: docker/login-action@v1.10.0
+        if: startsWith(github.ref, 'refs/tags/docker-v')
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESSTOKEN }}
