change to https://disroopartifacts.jfrog.io/artifactory/api/conan/disroop-conan

--- a/config-build.json
+++ b/config-build.json
@@ -26,7 +26,7 @@
     "remotes": [
         {
             "name": "disroop-conan",
-            "url": "https://disroop.jfrog.io/artifactory/api/conan/disroop-conan",
+            "url": "https://disroopartifacts.jfrog.io/artifactory/api/conan/disroop-conan",
             "login": true,
             "force": true
         }
