--- a/config-build.json
+++ b/config-build.json
@@ -1,24 +1,27 @@
 {
-    "channel": "development",
-    "user": "disroop",
+    "signature": {
+        "version": "snapshot",
+        "channel": "development",
+        "user": "disroop"
+    },
     "configurations":[
         {
-            "hostsettings": ["build_type=Debug"],
-            "buildsettings": ["build_type=Release"],
+            "host_settings": ["build_type=Debug"],
+            "build_settings": ["build_type=Release"],
             "build": "missing",
             "includes": ["cmake_vars","gcc_arm_none_eabi"]
         },
         {
-            "hostprofile": ".profiles/arm-m4-debug",
-            "buildprofile": "default",
-            "buildsettings": ["build_type=Release"],
+            "host_profile": ".profiles/arm-m4-debug",
+            "build_profile": "default",
+            "build_settings": ["build_type=Release"],
             "build": "missing",
             "excludes": ["cmake_vars","gcc_arm_none_eabi"]
         },
         {
-            "hostprofile": ".profiles/arm-m4-release",
-            "buildprofile": "default",
-            "buildsettings": ["build_type=Release"],
+            "host_profile": ".profiles/arm-m4-release",
+            "build_profile": "default",
+            "build_settings": ["build_type=Release"],
             "build": "missing",
             "excludes": ["cmake_vars","gcc_arm_none_eabi"]
         }
